--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 ﻿/*
 Theme Name: Madaka
 Author URI: https://www.vtrois.com/
-Description: Madaka 是一款专注于二次元博客的主题，技术基于Kratos主题+pjax技术的二次开发版本。提供了一套可自定义的积木式页面配置组件，可以通过使用小工具、导航、社交组件、站点标识、自定颜色等来个性化你的站点。
+Description: Madaka 是一款专注于二次元博客的主题，基于Kratos+pjax技术的二次开发版本。提供了一套可自定义的积木式页面配置组件，可以通过使用小工具、导航、社交组件、站点标识、自定颜色等来个性化你的站点。
 Version: 0.4.0
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
